# QUANT

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: Home.py
app/pages/: 1_Skill_Tree.py  2_Drills.py  3_Sprints.py  4_Backtests.py  5_Artifacts.py  6_Interview_Gym.py  7_Career_Pipeline.py  8_Settings.py
app/ui/: components.py  theme.py
data/sample_prices/: AAPL.csv  MSFT.csv  README.txt  SPY.csv
data/university/: subjects.json
quant_core/: __init__.py  config.py
quant_core/backtest/: costs.py  engine.py  metrics.py  robustness.py  vectorbt_adapter.py
quant_core/career/: crm.py  pipeline.py
quant_core/db/: __init__.py  db.py  models.py  repositories.py  schema.sql
quant_core/drills/: generators.py  question_bank.py  scheduler.py  scoring.py
quant_core/interview/: mock_interview.py  rubric.py
quant_core/skills/: mastery.py  skill_tree.py
quant_core/sprints/: artifact_manager.py  memo.py  sprint_runner.py  templates.py
quant_core/university/: planner.py  subjects_loader.py
tests/: test_backtest_metrics.py  test_db_roundtrip.py  test_mastery.py  test_robustness.py  test_scheduler.py
