[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
description = "Personal Quant Apprenticeship OS"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.36",
  "pandas>=2.2",
  "numpy>=1.26",
  "python-dateutil>=2.9",
  "markdown>=3.6",
  "plotly>=5.22",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5", "pre-commit>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_core*"]

[tool.ruff]
line-length = 100

'target-version' = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
